[tool.poetry]
name = "vision-common"
version = "0.3.0"
description = "Common code for Vision-web3 off-chain components."
authors = ["vision-web3 <contact@notemail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/vision-web3/common"
packages = [
    { include = "vision" }
]

[tool.setuptools.packages.find]
where = ["."]
include = ["vision"]
namespaces = true

[tool.poetry.group.test.dependencies]
pytest = "7.4.0"
pytest-cov = "4.1.0"
web3 = {extras = ["tester"], version = "^7.10.0"}

[tool.poetry.group.lint.dependencies]
bandit = "1.7.5"
flake8 = "6.0.0"
isort = "5.12.0"
mypy = "1.6.0"
types-pyyaml = "6.0.12.10"
types-requests = "2.31.0.1"
yapf = "0.40.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.3.3"

[tool.poetry.dependencies]
python = "^3.13"
celery = "5.3.1"
Cerberus = "1.3.4"
Flask-RESTful = "0.3.10"
JSON-log-formatter = "0.5.2"
PyYAML = "6.0.1"
requests = "2.32.3"
web3 = "7.10.0"
python-dotenv = "1.0.1"
pycryptodome = "3.20.0"
hexbytes = "1.2.1"
semantic-version = "2.10.0"
eth-account = "0.13.1"
marshmallow = "^3.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
